simple-app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trivial-go-web-app
  template:
    metadata:
      labels:
        app: trivial-go-web-app
        second: label
    spec:
      containers:
      - name: webserver-simple
        image: docker.io/kostiscodefresh/gitops-simple-app:v2.0
        ports:
        - containerPort: 8080
